Projede 6 tane değişken oluşturuldu ve bu değişkenler tamamlandı

--- a/Services/Catalog/MultiShop.Catalog/appsettings.json
+++ b/Services/Catalog/MultiShop.Catalog/appsettings.json
@@ -1,6 +1,6 @@
 {
   "DatabaseSettings": {
-    "CategoryCollectionNmate": "Categories",
+    "CategoryCollectionName": "Categories",
     "ProductCollectionName": "Products",
     "ProductDetailCollectionName": "ProductDetails",
     "ProductImageCollectionName": "ProductImages",
